--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,9 +43,20 @@ jobs:
           echo Is build tools installed...?
           mvn --version 
           gradle --version 
-      - name: pushing image to dockerhub 
+      - name: Building jar file  
         run: | 
          mvn clean install -DskipTests
+      -  name: Login to Docker Hub
+         uses: docker/login-action@v2
+         with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: hrc1663/testingwithgithubactionapp:latest
+         
          
   test: 
      runs-on: ubuntu-latest 
