--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,9 +43,12 @@ jobs:
           echo Is build tools installed...?
           mvn --version 
           gradle --version 
-      - name: Building jar file  
-        run: | 
-         mvn clean install -DskipTests
+#       - name: Building jar file  
+#         run: | 
+#          mvn clean install -DskipTests
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -  name: Login to Docker Hub
          uses: docker/login-action@v2
          with:
