--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,6 +47,9 @@ jobs:
 #         run: | 
 #          mvn clean install -DskipTests
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -  name: Login to Docker Hub
