--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Building jar file  
         run: | 
          mvn clean install -DskipTests
+         pwd
       -  name: Login to Docker Hub
          uses: docker/login-action@v2
          with:
