--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
   
 	  <distributionManagement>
 	    <repository>
-	      <id>ossrh</id>
+	      <id>github</id>
 	      <name>Test</name>
-	      <url>https://github.com/Hemavathy2001</url>
+	      <url>https://maven.pkg.github.com/Hemavathy2001/gitActions</url>
 	    </repository>
 	  </distributionManagement>
 
