--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,11 @@ jobs:
         run: | 
          mvn clean install -DskipTests
          pwd      
+     
+      - name: Publish to GitHub Packages Apache Maven
+        run: mvn deploy -s $WORKSPACE/settings.xml
+        env:
+         GITHUB_TOKEN: ${{ token }}
 #       - name: Build & push Docker image
 #         uses: mr-smithers-excellent/docker-build-push@v5
 #         with:
