--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Publish to GitHub Packages Apache Maven
         run: mvn deploy -s $WORKSPACE/settings.xml
         env:
-         GITHUB_TOKEN: ${{ TOKEN }}
+         GITHUB_TOKEN: $TOKEN
 #       - name: Build & push Docker image
 #         uses: mr-smithers-excellent/docker-build-push@v5
 #         with:
