--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,13 @@ jobs:
       - name: Building jar file  
         run: | 
          mvn clean install -DskipTests
-         pwd      
+         pwd   
+      - name: Publish package
+        run: mvn --batch-mode deploy
         env:
-         GITHUB_TOKEN: $TOKEN
+          MAVEN_USERNAME: ${{ secrets.USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.TOKEN }}
+         
 #       - name: Build & push Docker image
 #         uses: mr-smithers-excellent/docker-build-push@v5
 #         with:
