--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 	    <repository>
 	      <id>github</id>
 	      <name>Test</name>
-	      <url>https://maven.pkg.github.com/Hemavathy2001/gitActions</url>
+	      <url>https://github.com/Hemavathy2001/gitActions</url>
 	    </repository>
 	  </distributionManagement>
 
