--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,56 +1,21 @@
-# This is a basic workflow to help you get started with Actions
-name: Test
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "test" ]
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Publish package to GitHub Packages
+on: push
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  publish:
+    runs-on: ubuntu-latest 
+    permissions: 
+      contents: read
+      packages: write 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: checking container 
-        run: |
-          echo I am in container 
-          ls -a 
-          echo checking java version .....
-          java --version
-          echo Is git installed.......?
-          git --version
-          echo Is build tools installed...?
-          mvn --version 
-          gradle --version   
-      - name: Building jar file  
-        run: | 
-         mvn clean install -DskipTests
-         pwd   
- 
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
-         GITHUB_TOKEN: ${{ secrets.TOKEN }}
-#       - name: Publish package
-#         run: mvn --batch-mode deploy
-#         env:
-#           MAVEN_USERNAME: ${{ secrets.USERNAME }}
-#           MAVEN_PASSWORD: ${{ secrets.TOKEN }}
-         
-#       - name: Build & push Docker image
-#         uses: mr-smithers-excellent/docker-build-push@v5
-#         with:
-#           image: hrc1663/spring-mongo-image
-#           tags: latest
-#           registry: docker.io
-#           dockerfile: Dockerfile
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-     
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           
           
           
