--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,11 +20,20 @@ jobs:
           git --version
           echo Is build tools installed...?
           mvn --version   
-      - uses: actions/setup-java@v3
+#       - uses: actions/setup-java@v3
+#         with:
+#           java-version: '11'
+#           distribution: 'adopt'
+#       - name: Publish package
+#         run: mvn --batch-mode deploy
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      - name: Set up Java for publishing to GitHub Packages
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Publish package
+      - name: Publish to GitHub Packages
         run: mvn --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
