--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>springboot-mongodb</artifactId>
+	<artifactId>springboot-mongo-db</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-mongodb-docker</name>
 	<description>Demo project for Spring Boot</description>
